add ksf map api endpoint
